updated pre talk

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui">
 
 		<link rel="stylesheet" href="css/reveal.css">
-		<link rel="stylesheet" href="css/theme/blood.css" id="theme">
+		<link rel="stylesheet" href="css/theme/white.css" id="theme">
 		<link rel="stylesheet" href="css/style.css">
 
 		<!-- Code syntax highlighting -->
@@ -44,7 +44,7 @@
 			<div class="slides">
 				<section>
 					<h1>Are you Talking to Me?</h1>
-					<h3>An analysis of Journalism conversation on Twitter</h3>
+					<h3>(Towards) An analysis of Journalism conversation on Twitter</h3>
 					<p>
 						<small><a href="http://martinjc.com">Martin Chorley</a> (<a href="http://twitter.com/martinjc">@martinjc</a>)</small>
 						<small> &amp; </small>
@@ -116,7 +116,7 @@
 					<p class="fragment">Are conversations happening mainly within the news community?</p>
 				</section>
 
-
+				<!--
 				<section>
 					<p>let's get some</p>
 					<h1 class="massive">DATA</h1>
@@ -125,7 +125,7 @@
 				<section>
 					<p>SOMETHING ABOUT THE API HERE</p>
 				</section>
-
+				
 
 				<section>
 					<h3>Streaming gives us:</h3>
@@ -136,9 +136,6 @@
 						<li>Retweets of any Tweet created by the user</li>
 						<li>Manual replies, created without pressing a reply button (e.g. “@twitterapi I agree”)</li>
 					</ul>
-				</section>
-
-				<section>
 					<h3>Streaming does not give us:</h3>
 					<ul>
 						<li>Tweets mentioning the user (e.g. “Hello @twitterapi!”)</li>
@@ -146,6 +143,7 @@
 						<li>Tweets by protected users</li>
 					</ul>
 				</section>
+				-->
 
 				<section>
 					<h3>Organisation accounts</h3>
@@ -198,9 +196,6 @@
 							</tbody>
 						</table>
 					</section>
-				</section>
-
-				<section>
 					<section>
 						<img class="stretch" style="background: white" src="img/dow.png">
 					</section>
@@ -300,17 +295,17 @@
 					</section>
 
 					<section>
-						<h3>But who are they talking to?</h3>
+						<h3>157,512 unique accounts mentioned</h3>
+						<h3>152,078 accounts available</h3>
+						<p>Others either already included in study, banned or deleted</p>
 					</section>
-				</section>
-
-				<section>
 
 					<section>
-						<h3>157,512 unique accounts mentioned</h3>
-						<p>(3,019 deleted/banned)
-						<p>(155,097 not already included in study)</p>
-						<h3>152,078 accounts available</h3>
+						<img class="stretch" style="background: white" src="img/layout_5.png">
+					</section>
+
+					<section>
+						<img class="stretch" style="background: white" src="img/classification.png">
 					</section>
 
 					<section>
@@ -320,7 +315,8 @@
 					<section data-background="img/profile.png">
 					</section>
 
-					<section data-background="img/cloud.png">
+					<section>
+						<img class="stretch" style="background: white" src="img/cloud.png">
 					</section>
 
 					<section>
