minor changes - this is presented version

--- a/index.html
+++ b/index.html
@@ -59,6 +59,13 @@
 				</section>
 
 				<section>
+					<h1>Questions</h1>
+					<p>Are news organisations conversing with the public?</p>
+					<p>Are journalists conversing with the public?</p>
+					<p>Are conversations happening mainly within the news community?</p>
+				</section>
+
+				<section>
 					<table class="stretch">
 						<thead>
 							<tr>
@@ -109,13 +116,6 @@
 					</section>
 				</section>
 
-				<section>
-					<h1>Questions</h1>
-					<p class="fragment">Are news organisations conversing with the public?</p>
-					<p class="fragment">Are journalists conversing with the public?</p>
-					<p class="fragment">Are conversations happening mainly within the news community?</p>
-				</section>
-
 				<!--
 				<section>
 					<p>let's get some</p>
@@ -126,30 +126,27 @@
 					<p>SOMETHING ABOUT THE API HERE</p>
 				</section>
 				
-
-				<section>
-					<h3>Streaming gives us:</h3>
-					<ul>
-						<li>Tweets created by the user</li>
-						<li>Tweets which are retweeted by the user</li>
-						<li>Replies to any Tweet created by the user</li>
-						<li>Retweets of any Tweet created by the user</li>
-						<li>Manual replies, created without pressing a reply button (e.g. “@twitterapi I agree”)</li>
-					</ul>
-					<h3>Streaming does not give us:</h3>
-					<ul>
-						<li>Tweets mentioning the user (e.g. “Hello @twitterapi!”)</li>
-						<li>Manual Retweets created without pressing a Retweet button (e.g. “RT @twitterapi The API is great”)</li>
-						<li>Tweets by protected users</li>
-					</ul>
-				</section>
 				-->
-
 				<section>
 					<h3>Organisation accounts</h3>
 					<p>guardian, guardiannews, MailOnline, DailyMail, DailyMailUK, BBCWorld, BBCNews, BBCBreaking, cnni, cnn, nytimes, nytimesworld, Reuters, ReutersLive, FinancialTimes, ft, thetimes, SkyNews, SkyNewsBreak, DailyMirror, ampp3d, Channel4News, TheSunNewspaper, Telegraph, independent, thei100</p>
 					<h3>Individuals accounts</h3>
 					<p>List of 2200+ '<a href="https://www.journalism.co.uk/prof">Journalists on Twitter</a>' from journalism.co.uk</p>
+				</section>
+
+				<section>
+					<h3>Streaming gives us:</h3>
+					<ul>
+						<li>Tweets created or <br/>retweeted by the user</li>
+						<li>Replies to and retweets <br/> of any Tweet created by the user</li>
+					</ul>
+					<p></p>
+					<h3>Streaming does not give us:</h3>
+					<ul>
+						<li>Tweets mentioning the user</li>
+						<li>Manual Retweets</li>
+						<li>Tweets by protected users</li>
+					</ul>
 				</section>
 
 				<section>
@@ -300,8 +297,8 @@
 						<p>Others either already included in study, banned or deleted</p>
 					</section>
 
-					<section>
-						<img class="stretch" style="background: white" src="img/layout_5.png">
+					<section data-background="img/layout_5.png">
+						<!--<img class="stretch" style="background: white" src="">-->
 					</section>
 
 					<section>
@@ -362,9 +359,8 @@
 							</tbody>
 						</table>
 					</section>
-
 					<section>
-						<h3>Average users mentioned (>=5 mentions)</h3>
+						<h3>Total mentions</h3>
 						<table>
 							<thead>
 								<tr>
@@ -376,13 +372,13 @@
 							<tbody>
 								<tr>
 									<td>Organisations</td>
-									<td>28.83</td>
-									<td>16.74</td>
+									<td>1611.5</td>
+									<td>1018.9</td>
 								</tr>
 								<tr>
 									<td>Individuals</td>
-									<td>7.92</td>
-									<td>8.06</td>
+									<td>214.5</td>
+									<td>239.9</td>
 								</tr>
 							</tbody>
 						</table>
@@ -411,7 +407,32 @@
 								</tr>
 							</tbody>
 						</table>
-					</section>					
+					</section>
+
+					<section>
+						<h3>Average number of users mentioned (>=5 mentions)</h3>
+						<table>
+							<thead>
+								<tr>
+									<th></th>
+									<th>News</th>
+									<th>Non-News</th>
+								</tr>
+							</thead>
+							<tbody>
+								<tr>
+									<td>Organisations</td>
+									<td>28.83</td>
+									<td>16.74</td>
+								</tr>
+								<tr>
+									<td>Individuals</td>
+									<td>7.92</td>
+									<td>8.06</td>
+								</tr>
+							</tbody>
+						</table>
+					</section>										
 				</section>
 
 				<section>
@@ -438,7 +459,7 @@
 
 
 				<section>
-					<h3>Thanks! - Questions?</h3>
+					<h3>Thanks!</h3>
 					<p><a href="http://martinjc.com">Martin Chorley</a> (<a href="http://twitter.com/martinjc">@martinjc</a>)</p>
 					<h4>Image Credits</h4>
 					<p><small>Caution - CC BY 2.0 by <a href="https://www.flickr.com/photos/pictureperfectpose/">Eugene Zemlyanskiy</a></small></p>
